--- a/index.html
+++ b/index.html
@@ -98,11 +98,12 @@ src="https://www.facebook.com/tr?id=501661866607121&ev=PageView&noscript=1"
         <div class="row">
           <div class="col-md-6">
             <img class="img-responsive" src="img/logo.png"> 
+            <div align="center">Integrating Knowledge</div>
             <h1 class="title">
-              
+            Understand brain activity better.
             </h1>
             <p class="h1-title-sub">
-              Integrating knowledge, classifying brain states
+            NBT Analytics provides valuable insights on how drugs influcence the brain.
             </p>
             <p><a class="btn btn-primary btn-lg" href="#services" role="button">Learn more</a></p>
           </div>
