--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@ src="https://www.facebook.com/tr?id=501661866607121&ev=PageView&noscript=1"
             <img class="img-responsive" src="img/logo.png"> 
             <div align="center">Integrating Knowledge</div>
             <h1 class="title">
-            Cutting-edge EEG analysis for clinical trials.
+            EEG analysis for clinical trials.
             </h1>
             <p class="h1-title-sub">
             NBT Analytics provides valuable insights on how drugs influcence the brain.
