is this too long?

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@ src="https://www.facebook.com/tr?id=501661866607121&ev=PageView&noscript=1"
             EEG analysis for clinical trials.
             </h1>
             <p class="h1-title-sub">
-            NBT Analytics provides valuable insights on how drugs influcence the brain.
+            NBT Analytics provides valuable insights on how drugs influcence the brain with a comprehensive selection of EEG biomarkers and identification of drug specific indices.
             </p>
             <p><a class="btn btn-primary btn-lg" href="#services" role="button">Learn more</a></p>
           </div>
