--- a/index.html
+++ b/index.html
@@ -83,11 +83,11 @@ src="https://www.facebook.com/tr?id=501661866607121&ev=PageView&noscript=1"
 
         <div class="collapse navbar-collapse" id="navbar-collapse">
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="#services">Our services</a></li>
-            <li><a href="#biomarkers">EEG biomarkers</a></li>
-            <li><a href="#indices">Drug indices</a></li>
-            <li><a href="#about">About us</a></li>
-            <li><a href="#contact">Contact</a></li>
+            <li><a href="#services" onclick="ga('send', 'event', 'Link', 'Click', 'services');">Our services</a></li>
+            <li><a href="#biomarkers" onclick="ga('send', 'event', 'Link', 'Click', 'biomarkers');">EEG biomarkers</a></li>
+            <li><a href="#indices" onclick="ga('send', 'event', 'Link', 'Click', 'indices');">Drug indices</a></li>
+            <li><a href="#about" onclick="ga('send', 'event', 'Link', 'Click', 'about');">About us</a></li>
+            <li><a href="#contact" onclick="ga('send', 'event', 'Link', 'Click', 'contact');">Contact</a></li>
           </ul>
         </div>
       </div>
