--- a/index.html
+++ b/index.html
@@ -25,6 +25,12 @@
   ga('send', 'pageview');
 </script>
 <!-- end Google Analytics tag -->
+<script src="jquery.scrolldepth.min.js"></script>
+<script>
+jQuery(function() {
+  jQuery.scrollDepth();
+});
+</script>
 <link rel="shortcut icon" href="/favicon.ico">
     <script type="application/ld+json">
     {
