--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@ src="https://www.facebook.com/tr?id=501661866607121&ev=PageView&noscript=1"
               Comprehensive mapping of drug-induced neurophysiological changes in brain activity.
             </h2>
             <p>
-              NBT Analytics provides detailed insights for CNS drug development through state-of-the-art electroencephalography (EEG) analysis. 
+              NBT Analytics provides detailed insights for CNS drug development through state-of-the-art quantitative electroencephalography (EEG) analysis. 
             </p>
             <p>
               Our neuroimaging services for clinical trials are based on an EEG analysis pipeline developed at the VU University Amsterdam, which provides a comprehensive selection of neurophysiological biomarkers and uses machine-learning algorithms to identify highly sensitive indices of drug-induced changes in brain activity. 
@@ -151,7 +151,7 @@ src="https://www.facebook.com/tr?id=501661866607121&ev=PageView&noscript=1"
           <div class="col-md-6">
             <h6>EEG biomarkers</h6>
             <h2>Secondary endpoints for clinical trials</h2>
-            <p> Electroencephalography (EEG) is a non-invasive, inexpensive and broadly available neuroimaging method that measures neurophysiological changes. The EEG is information rich and may give valuable insights on how a drug affects brain. EEG biomarkers, therefore, have great potential as secondary endpoints in clinical trials.</p>
+            <p> Electroencephalography (EEG) is a non-invasive, inexpensive and broadly available neuroimaging method that measures neurophysiological changes. The EEG is information rich and may give valuable insights on how a drug affects brain. Quantitative EEG biomarkers, therefore, have great potential as secondary endpoints in clinical trials.</p>
             <p>We provide analysis based on a comprehensive selection of EEG biomarkers in the temporal, spatial, and spectral domains. By mapping multiple EEG biomarkers we obtain a detailed overview of drug induced neurophysiological changes, that further can be integrated into highly sensitive indices (see below).</p>
             <p>The EEG is particularly sensitive to alterations in the excitatory/inhibitory balance, which is compromised in several neuropsychiatric disorders<sup>1</sup>. We have developed novel biomarkers that are sensitive to modulations of the excitatory/inhibitory balance and predict an important role of these biomarkers for understanding drug effects in humans<sup>2,3,4</sup>. One of these biomarkers is the oscillation burst duration biomarker, which has shown great sensitivity to a Alzheimer’s disease<sup>2</sup> (see Figure)</p>
             <ol class="refs">
