--- a/404.html
+++ b/404.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <meta http-equiv="refresh" content="0; url=http://www.nbt-analytics.com">
+<link rel="canonical" href="http://www.nbt-analytics.com" />
 </head>
 <body>
 </body>
