--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 </script>
 <!-- end Google Analytics tag -->
 <link rel="shortcut icon" href="/favicon.ico">
+<link rel="canonical" href="http://www.nbt-analytics.com/" />
     <script type="application/ld+json">
     {
       "@context": "http://schema.org",
