--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@ src="https://www.facebook.com/tr?id=501661866607121&ev=PageView&noscript=1"
             <h6>Contact</h6>
             <p>
               E-mail: info@nbt-analytics.com <br>
-              Call: +31 (0) 20 xxx xxxx
+              Call: +31 (0) 20 598 6479 
             <div class="addthis_horizontal_follow_toolbox"></div>
             </p>
           </div>
