--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     
-    <title>EEG analysis for CNS drug development and clinical trials | NBT Analytics</title>
+    <title>EEG analysis for clinical trials | NBT Analytics</title>
     <meta name="Description" content="NBT Analytics provides valuable insights on how drugs influcence the brain.">
     <meta property="fb:admins" content="710920251">
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
@@ -46,13 +46,13 @@
 <!-- tagging for social media -->
 <meta property="og:locale" content="en_US">
 <meta property="og:type" content="website">
-<meta property="og:title" content="EEG analysis for CNS drug development and clinical trials | NBT Analytics">
+<meta property="og:title" content="EEG analysis for clinical trials | NBT Analytics">
 <meta property="og:description" content="NBT Analytics provides valuable insights on how drugs influcence the brain.">
 <meta property="og:url" content="http://www.nbt-analytics.com/">
 <meta property="og:site_name" content="NBT Analytics">
 <meta name="twitter:card" content="summary">
 <meta name="twitter:site" content="@nbtanalytics">
-<meta name="twitter:title" content="EEG analysis for CNS drug development and clinical trials | NBT Analytics">
+<meta name="twitter:title" content="EEG analysis for clinical trials | NBT Analytics">
 <meta name="twitter:description" content="NBT Analytics provides valuable insights on how drugs influcence the brain.">
 <meta name="twitter:image" content="http://www.nbt-analytics.com/img/logo.png">  
 <!-- Facebook Pixel Code -->
