--- a/index.html
+++ b/index.html
@@ -152,8 +152,8 @@ src="https://www.facebook.com/tr?id=501661866607121&ev=PageView&noscript=1"
           <div class="col-md-6">
             <h6>EEG biomarkers</h6>
             <h2>Secondary endpoints for clinical trials</h2>
-            <p> Electroencephalography (EEG) is a non-invasive, inexpensive and broadly available neuroimaging method that measures neurophysiological changes. The EEG is information rich and may give valuable insights on how a drug affects brain. Quantitative EEG biomarkers, therefore, have great potential as secondary endpoints in clinical trials.</p>
-            <p>We provide analysis based on a comprehensive selection of EEG biomarkers in the temporal, spatial, and spectral domains. By mapping multiple EEG biomarkers we obtain a detailed overview of drug induced neurophysiological changes, that further can be integrated into highly sensitive indices (see below).</p>
+            <p> Electroencephalography (EEG) is a non-invasive, inexpensive, and broadly available neuroimaging method that measures neurophysiological changes. The EEG is information rich and may give valuable insights on how a drug affects brain. Quantitative EEG biomarkers, therefore, have great potential as secondary endpoints in clinical trials.</p>
+            <p>We provide analysis based on a comprehensive selection of EEG biomarkers in the temporal, spatial, and spectral domains. By mapping multiple EEG biomarkers we obtain a detailed overview of drug induced neurophysiological changes that further can be integrated into highly sensitive indices (see below).</p>
             <p>The EEG is particularly sensitive to alterations in the excitatory/inhibitory balance, which is compromised in several neuropsychiatric disorders<sup>1</sup>. We have developed novel biomarkers that are sensitive to modulations of the excitatory/inhibitory balance and predict an important role of these biomarkers for understanding drug effects in humans<sup>2,3,4</sup>. One of these biomarkers is the oscillation burst duration biomarker, which has shown great sensitivity to a Alzheimer’s disease<sup>2</sup> (see Figure)</p>
             <ol class="refs">
               <li><a href="http://journal.frontiersin.org/article/10.3389/neuro.02.002.2008/full" target="_blank">Eichler and Meier (2008). E-I balance and human diseases - from molecules to networking. Frontiers of Molecular Neuroscience 1:2. </a></li>
@@ -202,7 +202,7 @@ src="https://www.facebook.com/tr?id=501661866607121&ev=PageView&noscript=1"
               NBT Analytics B.V. is a Dutch spin-off company from the VU University Amsterdam. The company was founded in August 2015 by Dr. Klaus Linkenkaer-Hansen, Dr. Simon-Shlomo Poil, and Medrithm Holding B.V. The company is funded by VU University Amsterdam and Medrithm Holding B.V.
             </p>
             <p>
-              NBT Analytics is build on the Neurophysiological Biomarker Toolbox (NBT), a research platform for M/EEG analysis developed at the VU University Amsterdam.
+              NBT Analytics is utilizing the Neurophysiological Biomarker Toolbox (NBT), a research platform for M/EEG analysis developed at the VU University Amsterdam.
             </p>
           </div>
           <div class="col-md-6 persons">
