Some of Klaus's changes

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     
     <title>EEG analysis for clinical trials | NBT Analytics</title>
-    <meta name="Description" content="NBT Analytics provides valuable insights on how drugs influcence the brain.">
+    <meta name="Description" content="NBT Analytics provides insights on how drugs influcence the brain.">
     <meta property="fb:admins" content="710920251">
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -47,13 +47,13 @@
 <meta property="og:locale" content="en_US">
 <meta property="og:type" content="website">
 <meta property="og:title" content="EEG analysis for clinical trials | NBT Analytics">
-<meta property="og:description" content="NBT Analytics provides valuable insights on how drugs influcence the brain.">
+<meta property="og:description" content="NBT Analytics provides insights on how drugs influcence the brain.">
 <meta property="og:url" content="http://www.nbt-analytics.com/">
 <meta property="og:site_name" content="NBT Analytics">
 <meta name="twitter:card" content="summary">
 <meta name="twitter:site" content="@nbtanalytics">
 <meta name="twitter:title" content="EEG analysis for clinical trials | NBT Analytics">
-<meta name="twitter:description" content="NBT Analytics provides valuable insights on how drugs influcence the brain.">
+<meta name="twitter:description" content="NBT Analytics provides insights on how drugs influcence the brain.">
 <meta name="twitter:image" content="http://www.nbt-analytics.com/img/logo.png">  
 <!-- Facebook Pixel Code -->
 <script>
@@ -101,10 +101,10 @@ src="https://www.facebook.com/tr?id=501661866607121&ev=PageView&noscript=1"
             <img class="img-responsive" src="img/logo.png"> 
             <div align="center">Integrating Knowledge</div>
             <h1 class="title">
-            EEG analysis for clinical trials.
+            EEG analysis for clinical trials
             </h1>
             <p class="h1-title-sub">
-            NBT Analytics provides valuable insights on how drugs influcence the brain with a comprehensive selection of EEG biomarkers and identification of drug specific indices.
+            NBT Analytics provides insights on how drugs influcence the brain with a comprehensive selection of EEG biomarkers and identification of drug specific indices.
             </p>
             <p><a class="btn btn-primary btn-lg" href="#services" role="button" onclick="ga('send', 'event', 'Link', 'Click', 'Learn more');">Learn more</a></p>
           </div>
@@ -118,13 +118,13 @@ src="https://www.facebook.com/tr?id=501661866607121&ev=PageView&noscript=1"
           <div class="col-md-6">
             <h6>Our services</h6>
             <h2>
-              Comprehensive mapping of drug-induced neurophysiological changes in brain activity.
+              Comprehensive mapping of drug-induced changes in brain activity.
             </h2>
             <p>
               NBT Analytics provides detailed insights for CNS drug development through state-of-the-art quantitative electroencephalography (EEG) analysis. 
             </p>
             <p>
-              Our neuroimaging services for clinical trials are based on an EEG analysis pipeline developed at the VU University Amsterdam, which provides a comprehensive selection of neurophysiological biomarkers and uses machine-learning algorithms to identify highly sensitive indices of drug-induced changes in brain activity. 
+              Our services for clinical trials are based on an EEG analysis pipeline developed at VU Amsterdam, which provides a comprehensive selection of neurophysiological biomarkers and uses machine-learning algorithms to identify sensitive indices of drug-induced changes in brain activity. 
             </p>
              Want to learn more? <br> Contact us at <a href="mailto:info@nbt-analytics.com">info@nbt-analytics.com</a>
             <p></p>
