--- a/index.html
+++ b/index.html
@@ -152,9 +152,9 @@ src="https://www.facebook.com/tr?id=501661866607121&ev=PageView&noscript=1"
           <div class="col-md-6">
             <h6>EEG biomarkers</h6>
             <h2>Secondary endpoints for clinical trials</h2>
-            <p> Electroencephalography (EEG) is a non-invasive, inexpensive, and broadly available neuroimaging method that measures neurophysiological changes. The EEG is information rich and may give valuable insights on how a drug affects brain. Quantitative EEG biomarkers, therefore, have great potential as secondary endpoints in clinical trials.</p>
-            <p>We provide analysis based on a comprehensive selection of EEG biomarkers in the temporal, spatial, and spectral domains. By mapping multiple EEG biomarkers we obtain a detailed overview of drug induced neurophysiological changes that further can be integrated into highly sensitive indices (see below).</p>
-            <p>The EEG is particularly sensitive to alterations in the excitatory/inhibitory balance, which is compromised in several neuropsychiatric disorders<sup>1</sup>. We have developed novel biomarkers that are sensitive to modulations of the excitatory/inhibitory balance and predict an important role of these biomarkers for understanding drug effects in humans<sup>2,3,4</sup>. One of these biomarkers is the oscillation burst duration biomarker, which has shown great sensitivity to a Alzheimer’s disease<sup>2</sup> (see Figure)</p>
+            <p> Electroencephalography (EEG) is a non-invasive, inexpensive, and broadly available neuroimaging method to measure neurophysiological activity. The EEG is information rich and may give valuable insights on how a drug affects brain. Quantitative EEG biomarkers, therefore, have great potential as secondary endpoints in clinical trials.</p>
+            <p>We provide analyses based on a comprehensive selection of EEG biomarkers in the temporal, spatial, and spectral domains. By mapping multiple EEG biomarkers, we obtain a detailed overview of drug-induced changes in brain activity that further can be integrated into sensitive indices (see below).</p>
+            <p>The EEG is particularly sensitive to alterations in the excitatory/inhibitory balance, which is compromised in several brain disorders<sup>1</sup>. We have developed novel biomarkers that are sensitive to modulations of the excitatory/inhibitory balance and predict an important role of these biomarkers for understanding drug effects in humans<sup>2,3,4</sup>. One of these biomarkers is the oscillation burst duration, which is strongly affected even in early-stage Alzheimer's disease<sup>2</sup> (see Figure)</p>
             <ol class="refs">
               <li><a href="http://journal.frontiersin.org/article/10.3389/neuro.02.002.2008/full" target="_blank">Eichler and Meier (2008). E-I balance and human diseases - from molecules to networking. Frontiers of Molecular Neuroscience 1:2. </a></li>
               <li><a href="http://www.pnas.org/content/106/5/1614.full" target="_blank">Montez et al. (2009). Altered temporal correlations in parietal alpha and prefrontal theta oscillations in early-stage Alzheimer disease. PNAS, 106(5): 1614–1619</a></li>
@@ -173,11 +173,11 @@ src="https://www.facebook.com/tr?id=501661866607121&ev=PageView&noscript=1"
             <h6>Drug indices</h6>
             <h2>Beyond single biomarkers</h2>
             <p>
-            The EEG can be parameterized in multiple biomarkers, which complicates the assessment of drug-induced effects and leads to reduced statistical power. 
+            The EEG can be parameterized in multiple biomarkers that often carry complementary sensitivity to drug- or disease-induced changes in brain activity. By combining multiple biomarkers into a single index, one may achieve a greater accuracy of classifying the presence of such effects compared to a single-biomarker based analysis (see Figure, simulated data).
             </p>
             <p>
-            We have developed an EEG analysis pipeline which identifies the right combination of multiple biomarkers and integrates these biomarkers into an index highly sensitive to a specific intervention or patient group<sup>5</sup>.
-            The integrated index can for example be used for prognostic purposes or provide a single value quantification of drug effects for dosage studies. By combining multiple biomarkers into a single index we achieve a higher statistical power compared to a single biomarker based analysis (see Figure, simulated data).
+            We have developed an EEG analysis pipeline that identifies the right combination of multiple biomarkers and integrates these biomarkers into an index highly sensitive to a specific intervention or patient group<sup>5</sup>.
+            The integrated index can for example be used for prognostic purposes or provide a single-value quantification of drug effects for dosage studies.
             </p>
             <ol start="5" class="refs">
               <li><a href="http://journal.frontiersin.org/article/10.3389/fnagi.2013.00058/full" target="_blank">Poil et al. (2013). Integrative EEG biomarkers predict progression to Alzheimer's disease at the MCI stage. Frontiers Aging Neuroscience 5:58.</a></li>
@@ -199,10 +199,7 @@ src="https://www.facebook.com/tr?id=501661866607121&ev=PageView&noscript=1"
               &ldquo;We strive to improve and accelerate CNS drug development through innovative EEG analysis.&rdquo;
             </h2>
             <p>
-              NBT Analytics B.V. is a Dutch spin-off company from the VU University Amsterdam. The company was founded in August 2015 by Dr. Klaus Linkenkaer-Hansen, Dr. Simon-Shlomo Poil, and Medrithm Holding B.V. The company is funded by VU University Amsterdam and Medrithm Holding B.V.
-            </p>
-            <p>
-              NBT Analytics is utilizing the Neurophysiological Biomarker Toolbox (NBT), a research platform for M/EEG analysis developed at the VU University Amsterdam.
+              NBT Analytics BV is a Dutch spin-off company from the VU Amsterdam. The company was founded in August 2015 by Dr. Klaus Linkenkaer-Hansen, Dr. Simon-Shlomo Poil, and Medrithm Holding B.V. NBT Analytics is built on the Neurophysiological Biomarker Toolbox (NBT), an EEG analysis platform developed at the VU Amsterdam.
             </p>
           </div>
           <div class="col-md-6 persons">
