--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@ src="https://www.facebook.com/tr?id=501661866607121&ev=PageView&noscript=1"
             EEG analysis for clinical trials
             </h1>
             <p class="h1-title-sub">
-            NBT Analytics provides insights on how drugs influcence the brain with a comprehensive selection of EEG biomarkers and identification of drug specific indices.
+            We provide insights on how drugs influcence the brain with a comprehensive selection of EEG biomarkers and identification of drug specific indices.
             </p>
             <p><a class="btn btn-primary btn-lg" href="#services" role="button" onclick="ga('send', 'event', 'Link', 'Click', 'Learn more');">Learn more</a></p>
           </div>
