--- a/index.html
+++ b/index.html
@@ -252,6 +252,32 @@ src="https://www.facebook.com/tr?id=501661866607121&ev=PageView&noscript=1"
               </div>
             </div>
           </div>
+          <div class="col-md-6 persons">
+             <div class="person">
+              <img src="img/head-thumbs-x.png">
+              <div class="profile">
+                <div class="name">Menno Noorlander</div>
+                <div class="position">Sales and marketing</div>
+                <div class="bg">...</div>
+              </div>
+            </div>
+            <div class="person">
+              <img src="img/head-thumbs-x.png">
+              <div class="profile">
+                <div class="name">Sonja Simpraga</div>
+                <div class="position">Scientific Developer</div>
+                <div class="bg">...</div>
+              </div>
+            </div>
+            <div class="person">
+              <img src="img/head-thumbs-x.png">
+              <div class="profile">
+                <div class="name">Simon Houtman</div>
+                <div class="position">Developer</div>
+                <div class="bg">...</div>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
