--- a/index.html
+++ b/index.html
@@ -99,7 +99,6 @@ src="https://www.facebook.com/tr?id=501661866607121&ev=PageView&noscript=1"
         <div class="row">
           <div class="col-md-6">
             <img class="img-responsive" src="img/logo.png"> 
-            
             <h1 class="title">
             EEG analysis for clinical trials
             </h1>
@@ -109,7 +108,7 @@ src="https://www.facebook.com/tr?id=501661866607121&ev=PageView&noscript=1"
             <p><a class="btn btn-primary btn-lg" href="#services" role="button" onclick="ga('send', 'event', 'Link', 'Click', 'Learn more');">Learn more</a></p>
           </div>
           <div class="col-md-6">
-            <div align="right">Integrating Knowledge</div>
+            <div class="h1-title-sub" align="right">Integrating Knowledge</div>
           </div>
         </div>
       </div>
