--- a/index.html
+++ b/index.html
@@ -231,6 +231,14 @@ src="https://www.facebook.com/tr?id=501661866607121&ev=PageView&noscript=1"
                 <div class="bg">...</div>
               </div>
             </div>
+            <div class="person">
+              <img src="img/head-thumbs-x.png">
+              <div class="profile">
+                <div class="name">Kate Backhouse</div>
+                <div class="position">Business Developer</div>
+                <div class="bg">...</div>
+              </div>
+            </div>
           </div>
           <div class="col-md-4 persons">
              <div class="person">
