changed Menno's title

--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@ src="https://www.facebook.com/tr?id=501661866607121&ev=PageView&noscript=1"
               <img src="img/head-thumbs-x.png">
               <div class="profile">
                 <div class="name">Menno Noorlander</div>
-                <div class="position">Sales and marketing</div>
+                <div class="position">Business Developer</div>
                 <div class="bg">...</div>
               </div>
             </div>
