--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       "@type": "Organization",
       "name" : "NBT Analytics",
       "url": "http://www.nbt-analytics.com",
-      "logo": "http://www.nbt-analytics.com/img/logo.png",
+      "logo": "http://www.nbt-analytics.com/img/logosmall.png",
       "sameAs" : [
         "https://twitter.com/nbtanalytics",
         "https://www.facebook.com/nbtanalytics",
@@ -50,11 +50,12 @@
 <meta property="og:description" content="NBT Analytics provides insights on how drugs influcence the brain.">
 <meta property="og:url" content="http://www.nbt-analytics.com/">
 <meta property="og:site_name" content="NBT Analytics">
+<meta property="og:image" content="http://www.nbt-analytics.com/img/logosmall.png">
 <meta name="twitter:card" content="summary">
 <meta name="twitter:site" content="@nbtanalytics">
 <meta name="twitter:title" content="EEG analysis for clinical trials | NBT Analytics">
 <meta name="twitter:description" content="NBT Analytics provides insights on how drugs influcence the brain.">
-<meta name="twitter:image" content="http://www.nbt-analytics.com/img/logo.png">  
+<meta name="twitter:image" content="http://www.nbt-analytics.com/img/logosmall.png">  
 <!-- Facebook Pixel Code -->
 <script>
 !function(f,b,e,v,n,t,s){if(f.fbq)return;n=f.fbq=function(){n.callMethod?
@@ -101,6 +102,11 @@ src="https://www.facebook.com/tr?id=501661866607121&ev=PageView&noscript=1"
             <img class="img-responsive" src="img/logo.png"> 
             <br>
             <br>
+          </div>
+          <div class="col-md-6">
+            <div class="h1-title-sub" align="right">Integrating Knowledge</div>
+          </div>
+          <div class="col-md-6">
             <h1 class="title">
             EEG analysis for clinical trials
             </h1>
@@ -108,9 +114,6 @@ src="https://www.facebook.com/tr?id=501661866607121&ev=PageView&noscript=1"
             We provide insights on how drugs influcence the brain with a comprehensive selection of EEG biomarkers and identification of drug specific indices.
             </p>
             <p><a class="btn btn-primary btn-lg" href="#services" role="button" onclick="ga('send', 'event', 'Link', 'Click', 'Learn more');">Learn more</a></p>
-          </div>
-          <div class="col-md-6">
-            <div class="h1-title-sub" align="right">Integrating Knowledge</div>
           </div>
         </div>
       </div>
