--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@ src="https://www.facebook.com/tr?id=501661866607121&ev=PageView&noscript=1"
           <div class="col-md-6">
             <div class="h1-title-sub" align="right">Integrating Knowledge</div>
           </div>
-          <div class="col-md-6">
+          <div class="col-md-6" style="float:left">
             <h1 class="title">
             EEG analysis for clinical trials
             </h1>
