--- a/index.html
+++ b/index.html
@@ -106,6 +106,8 @@ src="https://www.facebook.com/tr?id=501661866607121&ev=PageView&noscript=1"
           <div class="col-md-6">
             <div class="h1-title-sub" align="right">Integrating Knowledge</div>
           </div>
+        </div>
+        <div class="row">
           <div class="col-md-6" style="float:left">
             <h1 class="title">
             EEG analysis for clinical trials
@@ -115,6 +117,7 @@ src="https://www.facebook.com/tr?id=501661866607121&ev=PageView&noscript=1"
             </p>
             <p><a class="btn btn-primary btn-lg" href="#services" role="button" onclick="ga('send', 'event', 'Link', 'Click', 'Learn more');">Learn more</a></p>
           </div>
+        </div>
         </div>
       </div>
     </div>
