--- a/index.html
+++ b/index.html
@@ -102,7 +102,10 @@ src="https://www.facebook.com/tr?id=501661866607121&ev=PageView&noscript=1"
             <img class="img-responsive" src="img/logo.png"> 
           </div>
           <div class="col-md-6">
-            <div class="h1-title-sub" align="right">Integrating Knowledge</div>
+            <div class+"col-md-3"></div>
+            <div class+"col-md-3">
+              <div class="h1-title-sub">Integrating Knowledge</div>
+            </div>
           </div>
         </div>
         <div class="row">
