--- a/index.html
+++ b/index.html
@@ -98,18 +98,15 @@ src="https://www.facebook.com/tr?id=501661866607121&ev=PageView&noscript=1"
     <div id="head">
       <div class="container">
         <div class="row">
-          <div class="col-md-6">
+          <div class="col-xs-12 col-md-6">
             <img class="img-responsive" src="img/logo.png"> 
           </div>
           <div class="col-md-6">
-            <div class+"col-md-3"></div>
-            <div class+"col-md-3">
-              <div class="h1-title-sub">Integrating Knowledge</div>
-            </div>
+              <div class="h1-title-sub" align="right" >Integrating Knowledge</div>
           </div>
         </div>
         <div class="row">
-          <div class="col-md-6" style="float:left">
+          <div class="col-md-6">
             <h1 class="title">
             EEG analysis for clinical trials
             </h1>
