--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@ src="https://www.facebook.com/tr?id=501661866607121&ev=PageView&noscript=1"
     <div id="head">
       <div class="container">
         <div class="row">
-          <div class="col-xs-12 col-md-6">
+          <div class="col-xs-12 col-sm-12 col-md-6">
             <img class="img-responsive" src="img/logo.png"> 
           </div>
           <div class="col-md-6">
