--- a/index.html
+++ b/index.html
@@ -101,7 +101,8 @@ src="https://www.facebook.com/tr?id=501661866607121&ev=PageView&noscript=1"
           <div class="col-xs-12 col-sm-12 col-md-6">
             <img class="img-responsive" src="img/logo.png"> 
           </div>
-          <div class="col-md-6">
+          <div class="col-md-3 col-xs-0 col-sm-0"></div>
+          <div class="col-md-3">
               <div class="h1-title-sub" align="right" >Integrating Knowledge</div>
           </div>
         </div>
