--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@ src="https://www.facebook.com/tr?id=501661866607121&ev=PageView&noscript=1"
     </nav>
 
     <div id="head">
-      <div class="container-fluid">
+      <div class="container">
         <div class="row">
           <div class="col-xs-12 col-sm-12 col-md-6">
             <img class="img-responsive" src="img/logo.png"> 
