--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       "@type": "Organization",
       "name" : "NBT Analytics",
       "url": "http://www.nbt-analytics.com",
-      "logo": "http://www.nbt-analytics.com/img/logosmall.png",
+      "logo": "http://www.nbt-analytics.com/img/logo.png",
       "sameAs" : [
         "https://twitter.com/nbtanalytics",
         "https://www.facebook.com/nbtanalytics",
@@ -50,12 +50,12 @@
 <meta property="og:description" content="NBT Analytics provides insights on how drugs influcence the brain.">
 <meta property="og:url" content="http://www.nbt-analytics.com/">
 <meta property="og:site_name" content="NBT Analytics">
-<meta property="og:image" content="http://www.nbt-analytics.com/img/logosmall.png">
+<meta property="og:image" content="http://www.nbt-analytics.com/img/logo.png">
 <meta name="twitter:card" content="summary">
 <meta name="twitter:site" content="@nbtanalytics">
 <meta name="twitter:title" content="EEG analysis for clinical trials | NBT Analytics">
 <meta name="twitter:description" content="NBT Analytics provides insights on how drugs influcence the brain.">
-<meta name="twitter:image" content="http://www.nbt-analytics.com/img/logosmall.png">  
+<meta name="twitter:image" content="http://www.nbt-analytics.com/img/logo.png">  
 <!-- Facebook Pixel Code -->
 <script>
 !function(f,b,e,v,n,t,s){if(f.fbq)return;n=f.fbq=function(){n.callMethod?
