--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 <meta name="twitter:site" content="@nbtanalytics">
 <meta name="twitter:title" content="EEG analysis for clinical trials | NBT Analytics">
 <meta name="twitter:description" content="NBT Analytics provides insights on how drugs influcence the brain.">
-<meta name="twitter:image" content="http://www.nbt-analytics.com/img/logo.png">  
+<meta name="twitter:image" content="http://www.nbt-analytics.com/img/logosmall.png">  
 <!-- Facebook Pixel Code -->
 <script>
 !function(f,b,e,v,n,t,s){if(f.fbq)return;n=f.fbq=function(){n.callMethod?
