--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     
     <title>EEG analysis for clinical trials | NBT Analytics</title>
-    <meta name="Description" content="NBT Analytics provides insights on how drugs influcence the brain.">
+    <meta name="Description" content="NBT Analytics provides insights on how drugs influence the brain.">
     <meta property="fb:admins" content="710920251">
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -54,7 +54,7 @@
 <meta name="twitter:card" content="summary">
 <meta name="twitter:site" content="@nbtanalytics">
 <meta name="twitter:title" content="EEG analysis for clinical trials | NBT Analytics">
-<meta name="twitter:description" content="NBT Analytics provides insights on how drugs influcence the brain.">
+<meta name="twitter:description" content="NBT Analytics provides insights on how drugs influence the brain.">
 <meta name="twitter:image" content="http://www.nbt-analytics.com/img/logosmall.png">  
 <!-- Facebook Pixel Code -->
 <script>
@@ -112,7 +112,7 @@ src="https://www.facebook.com/tr?id=501661866607121&ev=PageView&noscript=1"
             EEG analysis for clinical trials
             </h1>
             <p class="h1-title-sub">
-            We provide insights on how drugs influcence the brain with a comprehensive selection of EEG biomarkers and identification of drug specific indices.
+            We provide insights on how drugs influence the brain with a comprehensive selection of EEG biomarkers and identification of drug specific indices.
             </p>
             <p><a class="btn btn-primary btn-lg" href="#services" role="button" onclick="ga('send', 'event', 'Link', 'Click', 'Learn more');">Learn more</a></p>
           </div>
@@ -133,7 +133,7 @@ src="https://www.facebook.com/tr?id=501661866607121&ev=PageView&noscript=1"
               NBT Analytics provides detailed insights for CNS drug development through state-of-the-art quantitative electroencephalography (EEG) analysis. 
             </p>
             <p>
-              Our services for clinical trials are based on an EEG analysis pipeline developed at VU Amsterdam, which provides a comprehensive selection of neurophysiological biomarkers and uses machine-learning algorithms to identify sensitive indices of drug-induced changes in brain activity. 
+              Our services for clinical trials are based on an EEG analysis pipeline developed at the Vrije Universiteit Amsterdam, which provides a comprehensive selection of neurophysiological biomarkers and uses machine-learning algorithms to identify sensitive indices of drug-induced changes in brain activity. 
             </p>
              Want to learn more? <br> Contact us at <a href="mailto:info@nbt-analytics.com">info@nbt-analytics.com</a>
             <p></p>
@@ -161,12 +161,12 @@ src="https://www.facebook.com/tr?id=501661866607121&ev=PageView&noscript=1"
           <div class="col-md-6">
             <h6>EEG biomarkers</h6>
             <h2>Secondary endpoints for clinical trials</h2>
-            <p> Electroencephalography (EEG) is a non-invasive, inexpensive, and broadly available neuroimaging method to measure neurophysiological activity. The EEG is information rich and may give valuable insights on how a drug affects brain. Quantitative EEG biomarkers, therefore, have great potential as secondary endpoints in clinical trials.</p>
+            <p> Electroencephalography (EEG) is a non-invasive, inexpensive, and broadly available neuroimaging method to measure neurophysiological activity. The EEG is information rich and may give valuable insights on how a drug affects the brain. Quantitative EEG biomarkers, therefore, have great potential as secondary endpoints in clinical trials.</p>
             <p>We provide analyses based on a comprehensive selection of EEG biomarkers in the temporal, spatial, and spectral domains. By mapping multiple EEG biomarkers, we obtain a detailed overview of drug-induced changes in brain activity that further can be integrated into sensitive indices (see below).</p>
             <p>The EEG is particularly sensitive to alterations in the excitatory/inhibitory balance, which is compromised in several brain disorders<sup>1</sup>. We have developed novel biomarkers that are sensitive to modulations of the excitatory/inhibitory balance and predict an important role of these biomarkers for understanding drug effects in humans<sup>2,3,4</sup>. One of these biomarkers is the oscillation burst duration, which is strongly affected in early-stage Alzheimer's disease<sup>2</sup> (see Figure)</p>
             <ol class="refs">
               <li><a href="http://journal.frontiersin.org/article/10.3389/neuro.02.002.2008/full" target="_blank">Eichler and Meier (2008). E-I balance and human diseases - from molecules to networking. Frontiers of Molecular Neuroscience 1:2. </a></li>
-              <li><a href="http://www.pnas.org/content/106/5/1614.full" target="_blank">Montez et al. (2009). Altered temporal correlations in parietal alpha and prefrontal theta oscillations in early-stage Alzheimer disease. PNAS, 106(5): 1614–1619</a></li>
+              <li><a href="http://www.pnas.org/content/106/5/1614.full" target="_blank">Montez et al. (2009). Altered temporal correlations in parietal alpha and prefrontal theta oscillations in early-stage Alzheimer's disease. PNAS, 106(5): 1614–1619</a></li>
               <li><a href="http://www.jneurosci.org/content/25/44/10131.full" target="_blank">Linkenkaer-Hansen et al. (2005). Breakdown of Long-Range Temporal Correlations in Theta Oscillations in Patients with Major Depressive Disorder. Journal of Neuroscience 25(44): 10131-10137 </a></li>
               <li><a href="http://www.jneurosci.org/content/32/29/9817.full" target="_blank">Poil et al. (2012). Critical-State Dynamics of Avalanches and Oscillations Jointly Emerge from Balanced Excitation/Inhibition in Neuronal Networks. Journal of Neuroscience 32(29): 9817-9823</a></li>
             </ol>
