--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
           </div>
           <div class="col-md-4 persons">
             <div class="person">
-              <img src="img/head-thumbs-JvD.png">
+              <img src="img/head-thumbs-jvd.png">
               <div class="profile">
                 <div class="name">Jeroen van Duffelen</div>
                 <div class="position">Interim Chief Executive Officer</div>
