--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 
-    <title>EEG analysis for clinical trials | NBT Analytics</title>
+    <title>Cool EEG analysis for clinical trials | NBT Analytics</title>
     <meta name="Description" content="NBT Analytics provides insights on how drugs influence the brain.">
     <link rel="shortcut icon" href="/favicon.ico">
     <link rel="canonical" href="http://www.nbt-analytics.com/" />
