--- a/index.html
+++ b/index.html
@@ -337,10 +337,11 @@
           <div class="col-md-3">
             <h6>Address</h6>
             <address>
-              NBT Analytics B.V.<br>
-              Science Park 402<br>
-              1098XH Amsterdam<br>
-              The Netherlands<br>
+            	NBT Analytics B.V.<br>
+      	        Amsterdam Health and Technology Center <br>
+		Paasheuvelweg 25 <br>
+		1105BP Amsterdam <br>
+		The Netherlands <br>
             </address>
           </div>
           <div class="col-md-3">
