--- a/index.html
+++ b/index.html
@@ -350,6 +350,8 @@
               <li><a href="#services">Our services</a></li>
               <li><a href="#biomarkers">EEG biomarkers</a></li>
               <li><a href="#indices">Drug indices</a></li>
+              <li><a href="#news">News</a></li>
+              <li><a href="#career">Career</a></li>
               <li><a href="#about">About us</a></li>
               <li><a href="#contact">Contact</a></li>
             </ul>
