--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
             <h2>NBT Analytics is looking for a lead programmer </h2>
             <p> As our first full-time programmer you will be responsible for the majority of our programming tasks. You will develop and expand our automated analysis pipeline. You will work in close collaboration with our scientific researchers and be responsible for implementing and testing of new analysis algorithms, and improvement of visual output and GUI functions. Your main programming language will be Matlab. 
 </p>
-		<ul>Skills and Competences:
+		<ul><b>Skills and Competences:</b>
 			<li>Background in Computer Science (or similar)</li>
 			<li>Profound knowledge of Matlab (or similar language), including object-oriented and GUI programming </li>
 			<li>Good knowledge of Linux based systems</li>
@@ -224,7 +224,7 @@
 			<li>Initiative and the capability to deliver high-quality work on time</li>
 			<li>A desire to make a difference in healthcare</li>
 		</ul>
-		<ul>We offer:
+		<ul><b>We offer:</b>
 			<li>1 FTE contract</li>
 			<li>Adequate salary</li>
 			<li>International and fun environment</li>
