--- a/dashboard.html
+++ b/dashboard.html
@@ -3,8 +3,10 @@
 </head>
 
 <body>
-<iframe src="https://podio.com"></iframe>
-
+<a href="https://www.podio.com"> Podio</a> <br>
+<a href="https://nbtanalytics.atlassian.net"> JIRA</a> <br>
+<a href="https://nbtanalytics.slack.com/"> Slack </a> <br>
+<a href="https://github.com/simon-shlomo/simon-shlomo.github.io">Website editing</a> 
 </body
 
 </html>
