--- a/dashboard.html
+++ b/dashboard.html
@@ -3,10 +3,10 @@
 </head>
 
 <body>
-<a href="https://www.podio.com"> Podio</a> <br>
-<a href="https://nbtanalytics.atlassian.net"> JIRA</a> <br>
-<a href="https://nbtanalytics.slack.com/"> Slack </a> <br>
-<a href="https://github.com/simon-shlomo/simon-shlomo.github.io">Website editing</a> 
+<a href="https://www.podio.com" target="_blank"> Podio</a> <br>
+<a href="https://nbtanalytics.atlassian.net" target="_blank"> JIRA</a> <br>
+<a href="https://nbtanalytics.slack.com/" target="_blank"> Slack </a> <br>
+<a href="https://github.com/simon-shlomo/simon-shlomo.github.io" target="_blank">Website editing</a> 
 </body
 
 </html>
