--- a/index.html
+++ b/index.html
@@ -234,12 +234,12 @@ button,h1,h2,h6{color:inherit}.btn,img{vertical-align:middle}.btn,[role=button],
 			<li>A desire to make a difference in healthcare</li>
 		</ul>
 		<ul><b>We offer:</b>
-			<li>1Full time employment</li>
+			<li>Full time employment</li>
 			<li>International and fun environment</li>
 			<li>Opportunity to be part of a quickly expanding and dynamic medtech startup</li>
 			<li>Opportunity to have real input in the technology and company</li>
 		</ul>
-<p>This position in based in Amsterdam and candidates must therefore live in suitable proximity. Do you match the description and are interested in what we do? Send us an <a href="mailto:kate.backhouse@nlc.nl?Subject=Programmer vacancy NBT" target="_top">email</a> with your c.v and list of grades.</p>
+<p>This position in based in Amsterdam and candidates must therefore live in suitable proximity. <br> Do you match the description and are interested in what we do? Send us an <a href="mailto:kate.backhouse@nlc.nl?Subject=Programmer vacancy NBT" target="_top">email</a> with your c.v and list of grades.</p>
           </div>
           <div class="col-md-5">
           <br> <br>
