--- a/index.html
+++ b/index.html
@@ -218,11 +218,11 @@ button,h1,h2,h6{color:inherit}.btn,img{vertical-align:middle}.btn,[role=button],
         <div class="row">
           <div class="col-md-7">
             <h6>Career</h6>
-            <h2>NBT Analytics is looking for a lead programmer </h2>
-            <p> As our first full-time programmer you will be responsible for the majority of our programming tasks. You will develop and expand our automated analysis pipeline. You will work in close collaboration with our scientific researchers and be responsible for implementing and testing of new analysis algorithms, and improvement of visual output and GUI functions. Your main programming language will be Matlab. 
+            <h2>Internship or Master Thesis Opportunity at NBT Analytics </h2>
+            <p> NBT Analytics is based on the open source Neurophysiological Biomarker Toolbox developed by the Neuronal Oscillations and Cognition Group at the Center for Neurogenomics and Cognitive Research (CNCR), Vrije Universiteit Amsterdam. Currently, NBT Analytics is looking to upgrade the technology, this will include testing and upgrading existing features, developing new functions for data characterization, statistical tests and visualization, and more. In this project there is room to have your own input. What’s more, there is the strong possibility that upon completion of the project, you will be offered a fulltime job at the company. 
 </p>
 		<ul><b>Skills and Competences:</b>
-			<li>Background in Computer Science (or similar)</li>
+			<li>Final year of Master in Computer Science, AI or similar</li>
 			<li>Profound knowledge of Matlab (or similar language), including object-oriented and GUI programming </li>
 			<li>Good knowledge of Linux based systems</li>
 			<li>Experience with implementation of Unit tests</li>
@@ -234,12 +234,14 @@ button,h1,h2,h6{color:inherit}.btn,img{vertical-align:middle}.btn,[role=button],
 			<li>A desire to make a difference in healthcare</li>
 		</ul>
 		<ul><b>We offer:</b>
-			<li>Full time employment</li>
-			<li>International and fun environment</li>
+			<li>Supervision of academic content and project management</li>
+			<li>Development of advanced MATLAB/NBT</li>
+			<li>Learning to work in a team to develop complex software packages</li>
+			<li>A great social environment</li>
 			<li>Opportunity to be part of a quickly expanding and dynamic medtech startup</li>
 			<li>Opportunity to have real input in the technology and company</li>
 		</ul>
-<p>This position in based in Amsterdam and candidates must therefore live in suitable proximity. <br> Do you match the description and are interested in what we do? Send us an <a href="mailto:kate.backhouse@nlc.nl?Subject=Programmer vacancy NBT" target="_top">email</a> with your c.v and list of grades.</p>
+<p>This position in based in Amsterdam at the Vrije Universiteit and candidates must therefore live in suitable proximity, the internship is based on 36-40 hours a week for 4-6 months. <br> Do you match the description and are interested in what we do? Send us an <a href="mailto:kate.backhouse@nlc.nl?Subject=Programmer vacancy NBT" target="_top">email</a> with your c.v and list of grades.</p>
           </div>
           <div class="col-md-5">
           <br> <br>
@@ -250,9 +252,9 @@ button,h1,h2,h6{color:inherit}.btn,img{vertical-align:middle}.btn,[role=button],
           <br> <br>
           	<div align="center">
           	<div style="padding: 10px; background-color: #4485E6; border:2px solid #4485E6;">
-          		<h2 style="color: White">Looking for an internship?<br>Need a thesis project?</h2>
+          		<h2 style="color: White">Interested in waht we do?<br>Background in computer science, AI, or similar?</h2>
           		<a href='http://www.nbt-analytics.com/assets/NBTAnalyticsInternship.pdf' style="color: White">Read more</a>
-          		<p style="color: White">We are always open to students<br><a href="mailto:kate.backhouse@nlc.nl?Subject=Internship/Thesis at NBT" target="_top" style="color: white; text-decoration: underline;">Email</a> us with your C.V. and list of grades for more information</p>
+          		<p style="color: White">Get in touch to find out possibilities<br><a href="mailto:kate.backhouse@nlc.nl?Subject=Internship/Thesis at NBT" target="_top" style="color: white; text-decoration: underline;">Email</a> us with your C.V. for more information</p>
   			</div>
   			</div>
           </div>
