--- a/index.html
+++ b/index.html
@@ -252,8 +252,8 @@ button,h1,h2,h6{color:inherit}.btn,img{vertical-align:middle}.btn,[role=button],
           <br> <br>
           	<div align="center">
           	<div style="padding: 10px; background-color: #4485E6; border:2px solid #4485E6;">
-          		<h2 style="color: White">Interested in what we do and looking for work?<br>Background in computer science, AI, or similar?</h2>
-          		<p style="color: White"><a href="mailto:kate.backhouse@nlc.nl?Subject=Internship/Thesis at NBT" target="_top" style="color: white; text-decoration: underline;">Get</a> in touch to find out possibilities<br></p>
+          		<h2 style="color: White">Interested in what we do<br>and looking for work?<br>Background in computer science,<br>AI, or similar?</h2>
+          		<p style="color: White"><a href="mailto:kate.backhouse@nlc.nl?Subject=Possibilities at NBT" target="_top" style="color: white; text-decoration: underline;">Get in touch</a> to find out possibilities<br></p>
   			</div>
   			</div>
           </div>
