updated internship description

--- a/index.html
+++ b/index.html
@@ -241,7 +241,8 @@ button,h1,h2,h6{color:inherit}.btn,img{vertical-align:middle}.btn,[role=button],
 			<li>Opportunity to be part of a quickly expanding and dynamic medtech startup</li>
 			<li>Opportunity to have real input in the technology and company</li>
 		</ul>
-<p>This position in based in Amsterdam at the Vrije Universiteit and candidates must therefore live in suitable proximity, the internship is based on 36-40 hours a week for 4-6 months. <br> Do you match the description and are interested in what we do? Send us an <a href="mailto:kate.backhouse@nlc.nl?Subject=Programmer vacancy NBT" target="_top">email</a> with your c.v and list of grades.</p>
+<p>This position in based in Amsterdam at the Vrije Universiteit and candidates must therefore live in suitable proximity, the internship is based on 36-40 hours a week for 4-6 months. <br> Do you match the description and are interested in what we do? Send us an <a href="mailto:backhouse.kate@nbt-analytics.com?Subject=Programmer vacancy NBT" target="_top">email</a> with your c.v with a photograph, a full list of grades and courses, plus the start/end dates and requirements of your thesis or project. 
+s.</p>
           </div>
           <div class="col-md-5">
           <br> <br>
